# gdl-usi-2024-spring

./: .gitignore  .gitmodules  GDL_Spring_2024_Project.ipynb  GDL_data_prep.ipynb  pyproject.toml
gnn-usi-24/: Introduction_to_GNNs.ipynb  Spatiotemporal_Graph_Neural_Networks_with_TSL.ipynb
gnn_usi_24/: GDL_Spring_2024_Project.py  data_prep.py  test.py
lecture notes/: intorduction-gdl.tex
nbs/: Introduction_to_GNNs.ipynb  Spatiotemporal_Graph_Neural_Networks_with_TSL.ipynb
