[tool.poetry]
name = "gnn_usi_24"
version = "0.1.0"
description = ""
authors = ["Mark <strategy155@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.2"
torch = "^2.2.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
pyarrow = "^16.0.0"
ipyparallel = "^8.8.0"
ipynb = "^0.5.1"
holidays = "^0.48"
pyg-lib = {version = "^0.4.0+pt23cu121", source = "pyg"}
torch-scatter = {version = "^2.1.2+pt23cu121", source = "pyg"}
torch-sparse = {version = "^0.6.18+pt23cu121", source = "pyg"}
torch-cluster = {version = "^1.6.3+pt23cu121", source = "pyg"}
torch-spline-conv = {version = "^1.2.2+pt23cu121", source = "pyg"}
torch-geometric = "^2.5.3"
torch-spatiotemporal = {git = "https://github.com/TorchSpatiotemporal/tsl.git"}
tensorboardx = "^2.6.2.2"
tensorboard = "^2.16.2"




[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.3.0+cu121.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
